tests/baselines/reference/parserInterfaceDeclaration6.errors.txt
parserInterfaceDeclaration6.ts(1,8): error TS1030: 'export' modifier already seen.


==== parserInterfaceDeclaration6.ts (1 errors) ====
    export export interface I {
           ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    }